--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/homeFragment">
-
+    app:startDestination="@id/dailyRoutineFragment">
     <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.example.mytimetodo.fragment.HomeFragment"
-        android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/dailyRoutineFragment"
+        android:name="com.example.mytimetodo.fragment.DailyRoutineFragment"
+        android:label="fragment_daily_routine"
+        tools:layout="@layout/fragment_daily_routine" />
 </navigation>
