add today's work check box in AddWorkFragment

--- a/app/src/main/res/layout/fragment_add_work.xml
+++ b/app/src/main/res/layout/fragment_add_work.xml
@@ -17,10 +17,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <CheckBox
+        android:id="@+id/chb_daily"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/today_work"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/recycler_add_work_color" />
+
+
     <EditText
         android:id="@+id/editTextTextPersonName"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="5dp"
         android:autofillHints="name"
         android:gravity="start"
         android:hint="@string/input_text_hint"
@@ -28,7 +38,8 @@
         app:layout_constraintBottom_toTopOf="@+id/btn_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recycler_add_work_color" />
+        app:layout_constraintTop_toBottomOf="@+id/chb_daily" />
+
 
     <LinearLayout
         android:id="@+id/btn_layout"
