--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!--  Material palette colors  -->
+    <color name="dark_primary_color">#FF0288D1</color>
+    <color name="light_primary_color">#FFB3E5FC</color>
+    <color name="primary_color">#FF03A9F4</color>
+    <color name="text_Icons">#FFFFFFFF</color>
+    <color name="accent_color">#FFFF4081</color>
+    <color name="primary_text">#FF212121</color>
+    <color name="secondary_text">#FF757575</color>
+    <color name="divider_color">#FFBDBDBD</color>
 </resources>
