--- a/app/src/main/res/layout/fragment_add_work.xml
+++ b/app/src/main/res/layout/fragment_add_work.xml
@@ -12,6 +12,7 @@
         android:id="@+id/recycler_add_work_color"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
