--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,10 +12,18 @@
         <action
             android:id="@+id/action_dailyRoutineFragment_to_addWorkFragment"
             app:destination="@id/addWorkFragment" />
+        <action
+            android:id="@+id/action_dailyRoutineFragment_to_otherWorksFragment"
+            app:destination="@id/otherWorksFragment" />
     </fragment>
     <fragment
         android:id="@+id/addWorkFragment"
         android:name="com.example.mytimetodo.fragment.AddWorkFragment"
         android:label="fragment_add_work"
         tools:layout="@layout/fragment_add_work" />
+    <fragment
+        android:id="@+id/otherWorksFragment"
+        android:name="com.example.mytimetodo.fragment.OtherWorksFragment"
+        android:label="fragment_other_works"
+        tools:layout="@layout/fragment_other_works" />
 </navigation>
