--- a/app/src/main/res/layout/fragment_add_work.xml
+++ b/app/src/main/res/layout/fragment_add_work.xml
@@ -28,7 +28,20 @@
 
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/et_work_title"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="5dp"
+        android:autofillHints="name"
+        android:gravity="start"
+        android:hint="@string/work_title"
+        android:inputType="text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chb_daily" />
+
+    <EditText
+        android:id="@+id/et_work_body"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
@@ -39,7 +52,7 @@
         app:layout_constraintBottom_toTopOf="@+id/btn_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/chb_daily" />
+        app:layout_constraintTop_toBottomOf="@+id/et_work_title" />
 
 
     <LinearLayout
