--- a/app/src/main/res/layout/fragment_other_works.xml
+++ b/app/src/main/res/layout/fragment_other_works.xml
@@ -10,6 +10,7 @@
         android:id="@+id/recycler_other_works"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="50dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
     <TextView
