--- a/app/src/main/res/layout/item_work.xml
+++ b/app/src/main/res/layout/item_work.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -10,11 +10,17 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:elevation="30dp"
-        app:cardCornerRadius="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:cardCornerRadius="15dp">
+
+        <ImageView
+            android:id="@+id/img_isDone"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:background="@drawable/icon_background"
+            android:contentDescription="@string/check_icon"
+            android:visibility="gone"
+            app:srcCompat="@drawable/ic_check"
+            app:tint="@color/light_primary_color" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -53,6 +59,17 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="10dp"
+                android:contentDescription="@string/check_icon"
+                app:layout_constraintEnd_toStartOf="@+id/img_edit"
+                app:layout_constraintTop_toBottomOf="@+id/tv_body"
+                app:srcCompat="@drawable/ic_check" />
+
+            <ImageView
                 android:id="@+id/img_edit"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
@@ -77,4 +94,4 @@
     </androidx.cardview.widget.CardView>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
