--- a/app/src/main/res/layout/item_work.xml
+++ b/app/src/main/res/layout/item_work.xml
@@ -13,7 +13,7 @@
         app:cardCornerRadius="15dp">
 
         <ImageView
-            android:id="@+id/img_isDone"
+            android:id="@+id/img_check_done"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:background="@drawable/icon_background"
@@ -59,7 +59,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/img_isDone"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_marginTop="5dp"
