--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,6 +18,9 @@
         <action
             android:id="@+id/action_dailyRoutineFragment_to_editWorkFragment"
             app:destination="@id/editWorkFragment" />
+        <action
+            android:id="@+id/action_dailyRoutineFragment_to_doneWorksFragment"
+            app:destination="@id/doneWorksFragment" />
     </fragment>
     <fragment
         android:id="@+id/addWorkFragment"
@@ -32,9 +35,17 @@
         <action
             android:id="@+id/action_otherWorksFragment_to_editWorkFragment"
             app:destination="@id/editWorkFragment" />
+        <action
+            android:id="@+id/action_otherWorksFragment_to_doneWorksFragment"
+            app:destination="@id/doneWorksFragment" />
     </fragment>
     <fragment
         android:id="@+id/editWorkFragment"
         android:name="com.example.mytimetodo.fragment.EditWorkFragment"
         android:label="EditWorkFragment" />
+    <fragment
+        android:id="@+id/doneWorksFragment"
+        android:name="com.example.mytimetodo.fragment.DoneWorksFragment"
+        android:label="fragment_done_works"
+        tools:layout="@layout/fragment_done_works" />
 </navigation>
