--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,5 +13,6 @@
         <item name="android:statusBarColor">@color/primary_text</item>
         <!-- Customize your theme here. -->
         <item name="android:navigationBarColor">@color/primary_text</item>
+        <item name="android:textColor">@color/primary_text</item>
     </style>
 </resources>
