--- a/app/src/main/res/layout/fragment_other_works.xml
+++ b/app/src/main/res/layout/fragment_other_works.xml
@@ -7,30 +7,42 @@
     tools:context=".fragment.OtherWorksFragment">
 
     <LinearLayout
-        android:id="@+id/btn_finished_work"
-        android:layout_width="wrap_content"
+        android:id="@+id/table_btns"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:gravity="center"
-        android:orientation="vertical"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:contentDescription="@string/finished_works"
-            android:src="@drawable/ic_done_works"
-            app:tint="@color/accent_color" />
 
-        <Button
-            style="?android:attr/buttonBarButtonStyle"
+        <TextView
+            android:id="@+id/btn_delete_all"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="top"
-            android:text="@string/finished_works"
-            android:textSize="12sp" />
+            android:layout_height="80dp"
+            android:layout_margin="5dp"
+            android:layout_weight=".4"
+            android:background="@drawable/border"
+            android:gravity="center"
+            android:text="@string/delete_all_works"
+            android:textSize="15sp"
+            app:drawableTint="@color/accent_color"
+            app:drawableTopCompat="@drawable/ic_delete" />
+
+        <TextView
+            android:id="@+id/btn_sort_by_color"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:layout_margin="5dp"
+            android:layout_weight=".4"
+            android:background="@drawable/border"
+            android:gravity="center"
+            android:text="@string/sort_by_color"
+            android:textSize="15sp"
+            app:drawableTint="@color/accent_color"
+            app:drawableTopCompat="@drawable/ic_sort_by_color" />
+
+
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -42,7 +54,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_finished_work" />
+        app:layout_constraintTop_toBottomOf="@+id/table_btns" />
 
     <TextView
         android:id="@+id/tv_empty"
